force-app/main/default/objects/Commercial_Partnership_Agreement__c/Commercial_Partnership_Agreement__c.object-meta.xml
<CustomObject>
    <label>Commercial Partnership Agreement</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Partnership Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>