force-app/main/default/objects/Commercial_Partnership_Agreement__c/fields/Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_End_Date__c</fullName>
    <inlineHelpText>Date the CCS commercial agreement ends.</inlineHelpText>
    <label>Agreement End Date</label>
    <type>Date</type>
</CustomField>