force-app/main/default/objects/Commercial_Partnership_Agreement__c/fields/Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Start_Date__c</fullName>
    <inlineHelpText>Date the CCS commercial agreement commenced (if the CPA contains different dates, these will be stated instead).</inlineHelpText>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>