force-app/main/default/objects/Commercial_Partnership_Agreement__c/fields/Commercial_Partnership_Agreement_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Partnership_Agreement_Expiry__c</fullName>
    <description>Date the Commercial Partnership Agreement Ends</description>
    <inlineHelpText>Date the Commercial Partnership Agreement Ends</inlineHelpText>
    <label>CPA Expiry Date</label>
    <type>Date</type>
</CustomField>