force-app/main/default/objects/Commercial_Partnership_Agreement__c/fields/Excluded_Sectors__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Sectors__c</fullName>
    <label>Excluded Sectors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Sectors_Excluded__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Members</fullName>
            </value>
            <value>
                <fullName>Associated Members</fullName>
            </value>
            <value>
                <fullName>WPS</fullName>
            </value>
            <value>
                <fullName>Local Government</fullName>
            </value>
            <value>
                <fullName>Local Authority</fullName>
            </value>
            <value>
                <fullName>Central Government</fullName>
            </value>
            <value>
                <fullName>Devolved</fullName>
            </value>
            <value>
                <fullName>Schools England</fullName>
            </value>
            <value>
                <fullName>Schools (Devolved)</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>NHS (England)</fullName>
            </value>
            <value>
                <fullName>Bluelight</fullName>
            </value>
            <value>
                <fullName>Police</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>