force-app/main/default/objects/Commercial_Partnership_Agreement__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>Commercial Partnership Agreements</relationshipLabel>
    <relationshipName>Partnership_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>