force-app/main/default/objects/Commercial_Partnership_Agreement__c/fields/LOTs__c.field-meta.xml
<CustomField>
    <fullName>LOTs__c</fullName>
    <inlineHelpText>Partnerships that only focus on specific LOTs, will be detailed here. The LOTs are included as part of the CPA and will form the basis on which levy share will only apply.</inlineHelpText>
    <label>LOTs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>