force-app/main/default/objects/Commercial_Partnership_Agreement__c/fields/Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Information__c</fullName>
    <inlineHelpText>Outlines any other specific details as part of the CPA</inlineHelpText>
    <label>Other Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>