force-app/main/default/objects/Commercial_Partnership_Agreement__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name of the Organisation in which CCS has a commercial partnership agreement in place.</inlineHelpText>
    <label>Partner Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commercial Partnership Agreements</relationshipLabel>
    <relationshipName>Partnership_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>