force-app/main/default/objects/Commercial_Partnership_Agreement__c/fields/Sectors_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Sectors_Excluded__c</fullName>
    <inlineHelpText>Details the specific sectors where levy share does not apply as part of the CPA.</inlineHelpText>
    <label>Sectors Excluded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>