force-app/main/default/objects/Commercial_Partnership_Agreement__c/fields/Sectors_Involved__c.field-meta.xml
<CustomField>
    <fullName>Sectors_Involved__c</fullName>
    <inlineHelpText>Details the specific sectors where levy share will apply and agreed between CCS and the Partner.</inlineHelpText>
    <label>Sectors Involved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>